<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CoinTaskActivity">

    <!-- 顶部工具栏 -->
    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/coin_task_layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 礼物盒子和标题区域 -->
    <LinearLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar">

        <!-- 礼物盒子和金币 -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/img_gift_box"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/coin_task_top_display_pic" />

        </FrameLayout>


        <!-- 标题文本 -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_more_coins"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <!-- 副标题文本 -->
        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hoard_coins_by_walking"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"

            android:background="?attr/colorOnBackground" />
    </LinearLayout>

    <!-- 任务列表区域 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_task_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_container" />

</androidx.constraintlayout.widget.ConstraintLayout>
